force-app/main/default/objects/ccrz__E_OrderItem__c/ccrz__E_OrderItem__c.object-meta.xml
<CustomObject>
    <description>The E_OrderItem__c object contains the line level detail of placed orders.</description>
    <label>CC Order Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>OrderItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>