force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a product was placed into a cart in the context of viewing a category this contains the reference to that category.</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>E_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>