force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Comments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Comments__c</fullName>
    <description>Cart line comments as applied to this item.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>