force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Coupon__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a coupon has been applied to the order this field contains a reference to that coupon.</description>
    <label>Coupon</label>
    <referenceTo>ccrz__E_Coupon__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>E_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>