force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__DisplayProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When this line refers to a product that is part of an aggregate product this field contains a reference to the parent aggregate product.</description>
    <label>Display Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Order Items (Display Product)</relationshipLabel>
    <relationshipName>CC_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>