force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__ExtName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExtName__c</fullName>
    <description>Defines a display Name to be used instead of the referenced Product Name for display in the cart/order.</description>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>