force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__ItemLabel__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ItemLabel__c</fullName>
    <description>Deprecated</description>
    <label>Item Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>