force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__OrderItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Order Item Group that the item belongs to. Used for Line Level Independence.</description>
    <label>Order Item Group</label>
    <referenceTo>ccrz__E_OrderItemGroup__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>E_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>