force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderItemId__c</fullName>
    <description>Reference id for external systems.</description>
    <externalId>true</externalId>
    <label>Order Item Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>