force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__OrderItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderItemStatus__c</fullName>
    <description>Status field at the line level. The initial value is always Order Submitted. Other values are non-functional and can be used by external systems for post-order placement status tracking.</description>
    <label>Order Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Submitted</fullName>
            </value>
            <value>
                <fullName>Cancel Submitted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Return Submitted</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Partial Shipped</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>