force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__OrderLineType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderLineType__c</fullName>
    <description>Either Major or Minor. Minor if this line item is part of a kit or bundle, otherwise Major.</description>
    <label>Order Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>