force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OriginalQuantity__c</fullName>
    <description>The purpose of this field is to store the appropriate quantity of line items that have products in the form of parent and child like bundles kits and dynamic kits</description>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>