force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__ParentOrderItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When this line item is part of a kit or bundle then this refers to the order line of that kit or bundle.</description>
    <label>Parent Order Item</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>