force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When this line item is part of a kit or bundle then this refers to the product that is the kit or bundle.</description>
    <label>Parent Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Order Items (ParentProductID)</relationshipLabel>
    <relationshipName>E_OrderItems1</relationshipName>
    <type>Lookup</type>
</CustomField>