force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Price__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Price__c</fullName>
    <description>The price of the product at the time the item was ordered.</description>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>