force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__PricingType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PricingType__c</fullName>
    <description>Defines how B2B Commerce internally handles the pricing for this cart/order item. If &apos;external&apos; then B2B Commerce pricing will not apply to the cart item (see further documentation for exact rules).</description>
    <externalId>true</externalId>
    <label>Pricing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>