force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the product for this line.</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Order Items (ProductID)</relationshipLabel>
    <relationshipName>E_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>