force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product_Name__c</fullName>
    <description>Product__r.Name</description>
    <formula>ccrz__Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>