force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__ProductType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductType__c</fullName>
    <description>Copied product type from the Product this line refers to, e.g. Product.</description>
    <label>ProductType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>