force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequestDate__c</fullName>
    <description>The request date for this line item. This will be the same value as at the order header.</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>