force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__SplitSource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SplitSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an order is split this field represents the source order item from which this order item originated.</description>
    <label>Split Source</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>Split Items</relationshipLabel>
    <relationshipName>ItemSplits</relationshipName>
    <type>Lookup</type>
</CustomField>