force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__StoreId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoreId__c</fullName>
    <description>The storefront name for this line. This will be the same value as at the order header.</description>
    <label>Store Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>