force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__SubProdTerm__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubProdTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific SubProdTerm associated with this order item.</description>
    <label>CC SubProdTerm</label>
    <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
    <relationshipLabel>CC Order Items</relationshipLabel>
    <relationshipName>CC_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>