force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The length in months that this subscription lasts.  Only applicable for Order Items that are subscriptions.</description>
    <inlineHelpText>The length in months that this subscription lasts.  Only applicable for Order Items that are subscriptions.</inlineHelpText>
    <label>Subscription Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>