force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Frequency__c</fullName>
    <description>Determines how often a new order is placed, in months, if this Order Item is a subscription.</description>
    <inlineHelpText>Determines how often a new order is placed, in months, if this Order Item is a subscription.</inlineHelpText>
    <label>Subscription Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>