force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Start_Date__c</fullName>
    <description>The date this subscription started.</description>
    <inlineHelpText>The date this subscription started.</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>