force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Status__c</fullName>
    <description>The status of the subscription, if this order item is a subscription.</description>
    <inlineHelpText>The status of the subscription, if this order item is a subscription.</inlineHelpText>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Reordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>