force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriptionId__c</fullName>
    <description>Subscription Id</description>
    <formula>IF( ccrz__Is_Subscription__c , &quot;S-&quot;&amp; Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubscriptionId</label>
    <type>Text</type>
</CustomField>