force-app/main/default/objects/ccrz__E_OrderItem__c/fields/ccrz__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UnitOfMeasure__c</fullName>
    <description>Unit of measure copied from the product.</description>
    <label>Unit Of Measure</label>
    <length>32</length>
    <type>Text</type>
</CustomField>