force-app/main/default/objects/ccrz__E_OrderItem__c/fields/Custom_PricingUOM__c.field-meta.xml
<CustomField>
    <fullName>Custom_PricingUOM__c</fullName>
    <label>Custom Pricing UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>