force-app/main/default/objects/ccrz__E_OrderItem__c/fields/Custom_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>Custom_UnitPrice__c</fullName>
    <label>Custom UnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>