force-app/main/default/objects/ccrz__E_OrderItem__c/fields/Tank_Number__c.field-meta.xml
<CustomField>
    <fullName>Tank_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tank Detail</label>
    <referenceTo>Tank_Detail__c</referenceTo>
    <relationshipLabel>CC Order Items</relationshipLabel>
    <relationshipName>CC_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>